fastmetrics-derive/tests/ui/fail/label_index_mapping/enum_with_payload_variant.rs
use fastmetrics_derive::LabelIndexMapping;

#[derive(LabelIndexMapping)]
enum NotUnit {
    A(u8),
    B,
}

fn main() {}
